deploy/kube/services/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  revisionHistoryLimit: 4
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: docker-pull
      volumes:
        - name: appsettings
          configMap:
            name: app-config
            items:
              - key: appsettings.json
                path: appsettings.json
        - name: cert
          secret:
            secretName: app-cert
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0004
      containers:
        - name: app
          image: jensdll/steganography:app.latest
          imagePullPolicy: Always
          securityContext:
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
            runAsNonRoot: true
            runAsUser: 100
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: appsettings
              mountPath: /app/properties/
              readOnly: true
            - name: cert
              mountPath: /usr/local/certs/
              readOnly: true
          resources:
            requests:
              cpu: "256m"
              memory: "768Mi"
            limits:
              cpu: "512m"
              memory: "1024Mi"
          ports:
            - containerPort: 8433
              protocol: TCP
