deploy/kube/services/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - name: websecure
      port: 8443
      protocol: TCP
