deploy/kube/services/app/route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: app-route-tcp
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`steganography.app`) || HostSNI(`www.steganography.app`)
      services:
        - name: app-service
          port: websecure
  tls:
    passthrough: true
